@@ -16,7 +16,7 @@ rdfns - look up common URI namespaces and prefixes
 
 =head1 VERSION
 
-version 20130930
+version 20131002
 
 =head1 SYNOPSIS
 
